--- a/css/receptes.css
+++ b/css/receptes.css
@@ -19,10 +19,9 @@ th {
 }
 th {
   background-color: aliceblue;
+  background-color: deepskyblue
 }
-td {
-  background-color: deepskyblue;
-}
+
 h1{
     color: #333;
     font-size: 20px;
