--- a/css/ex11.css
+++ b/css/ex11.css
@@ -1,4 +1,26 @@
 table,th,td{
     border: 1px solid black;
     border-collapse: collapse;
+    text-align: center;
+}
+.m06{
+background-color: aqua;
+}
+.m07{
+background-color: aquamarine; 
+}
+.m08{
+  background-color: rgb(201, 146, 252);  
+}
+.m04{
+  background-color: rgb(255, 140, 140);  
+}
+.tut{
+  background-color: rgb(253, 252, 161);  
+}
+.m10eie{
+    background-color: rgb(255, 145, 222);
+}
+.des{
+  background-color: rgb(255, 170, 113);  
 }
