--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,12 +1,15 @@
-.idioma{
-
+.idiomas{
+background-color: rgba(150, 215, 253, 0.733);
 }
 .datos{
-
+background-color: rgb(252, 179, 137);
 }
 .nacionalidat{
-
+background-color: rgb(161, 255, 148);
 }
-estudios{
-    
+.estudios{
+background-color: rgb(255, 190, 244);
+}
+.final{
+    background-color: darkgray;
 }
