--- a/css/ex12.css
+++ b/css/ex12.css
@@ -18,3 +18,74 @@ table,th,td{
   .aparienciae,.elizabeth,.personalidade{
     color: rgb(99, 33, 116);
     font-weight: 900;}
+    .btn-neon{
+      position: relative;
+      display: inline-block;
+      padding: 15px 30px;
+      color: #fff;
+      letter-spacing: 4px;
+      font-size: 24px;
+      text-decoration: none;
+      overflow: hidden;
+      transition: 0.2s;
+    }
+    .btn-neon:hover{
+    background:rgb(245, 248, 78) ; 
+    box-shadow: 0 0 10px rgb(245, 248, 78),0 0 40px
+    rgb(245, 248, 78), 0 0 80px rgb(245, 248, 78);
+    transition-delay:1s;
+
+    }
+    .btn-neon span{
+      position: absolute;
+      display: block;
+    }
+    #span1{
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(90deg,transparent,rgb(245,248,78);
+
+    }
+    .btn-neon:hover #span1{
+      left: 100%;
+      transition: 1s;
+    }
+
+    #span3{
+      bottom: 0;
+      right: -100%;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(270deg,transparent,rgb(245,248,78);
+
+    }
+    .btn-neon:hover #span3{
+      right: 100%;
+      transition-delay: 0.5s;
+    }
+    #span2{
+      top: -100;
+      right: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(180deg,transparent,rgb(245,248,78);
+
+    }
+    .btn-neon:hover #span2{
+      top: 100%;
+      transition-delay: 0.25s;
+    
+    }
+    #span4{
+      bottom: -100;
+      left: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(360deg,transparent,rgb(245,248,78);
+
+    }
+    .btn-neon:hover #span4{
+      bottom: 100%;
+      transition-delay: 0.75s;
