--- a/css/ex12.css
+++ b/css/ex12.css
@@ -22,7 +22,7 @@ table,th,td{
       position: relative;
       display: inline-block;
       padding: 15px 30px;
-      color: #fff;
+      color: rgb(15, 14, 14);
       letter-spacing: 4px;
       font-size: 24px;
       text-decoration: none;
