--- a/css/NF2/exercici1.css
+++ b/css/NF2/exercici1.css
@@ -1,4 +1,35 @@
-.inicio{
-    width: 600px;
-    height: 600px;
+.inicio {
+  width: 600px;
+  height: 600px;
+}
+.alargado1 {
+background-color: rgb(250, 152, 237);
+width: 50px;
+height:10px;
+}
+.alargado2 {
+background-color:rgb(255, 215, 250);
+width: 50;
+height:10px
+}
+.pequeño1 {
+    background-color: rgb(250, 152, 237); 
+    width: 50px;
+    height:10px
+}
+.pequeño2 {
+    background-color:rgb(255, 215, 250);
+    width: 50px;
+    height:10px
+    
+}
+.grande1 {
+    background-color: rgb(225, 171, 236);
+    width: 50px;
+    height:30px
+}
+.grande2 {
+    background-color:rgb(250, 152, 237);
+width: 50px;
+    height: 40px;
 }
