--- a/css/NF2/exercici2.css
+++ b/css/NF2/exercici2.css
@@ -3,71 +3,85 @@
   height: 600px;
   margin: 5pt;
 }
-.alargado1 {
+.a1 {
 background-color: rgb(250, 152, 237);
-width: 62%;
+width: 100%;
 height:60px;
 border: 1px solid;
 float: left;
 margin: 5px;
 }
-.alargado2 {
-    background-color: rgb(250, 215,250);
-    width: 62%;
-    height:60px;
+.a2 {
+    background-color: rgb(211, 152, 250); 
+    width: 50%;
+    height:175px;
     border: 1px solid;
-    float: left;
-    margin: 5px;
-    }
-
-
-.pequeno1 {
-    background-color: rgb(250, 152, 237); 
-    width: 30%;
-    height:55px;
-    border: 1px solid;
-float: right;
+float: left;
 margin: 5px;
 }
-.pequeno1r {
+.a3 {
     background-color: rgb(250, 152, 237); 
-    width: 30%;
-    height:60px;
+    width: 50%;
+    height:235px;
     border: 1px solid;
-float: right;
+float:right;
 margin: 5px;
 }
-
-
-.pequeno2 {
+.a10{
     background-color:rgb(255, 215, 250);
-    width: 30%;
+    width: 100%;
     height:60px;
     border: 1px solid;
     float: right;
     margin: 5px;
 }
-.grande1 {
-    background-color: rgb(225, 171, 236);
-    width: 30%;
-    height:120px;
+
+
+.a4 {
+    background-color:rgb(255, 215, 250);
+    width: 50%;
+    height:60px;
+    border: 1px solid;
+    float: left;
+    margin: 5px;
+}
+.a6 {
+    background-color: rgb(255, 215, 245);
+    width: 50%;
+    height:60px;
     border: 1px solid;
 float:left;
 margin: 5px;
 }
-.grande2 {
-    background-color:rgb(250, 152, 237);
-     width: 30%;
-    height: 120px;
+.a5 {
+    background-color:rgb(211, 152, 250);
+     width: 50%;
+    height: 275px;
     border: 1px solid;
 float: left;
 margin: 5px;
 }
-.grande2r {
-    background-color:rgb(250, 152, 237);
-     width: 30%;
-    height: 120px;
+.a11 {
+    background-color:rgb(220, 173, 241);
+     width: 235%;
+    height: 175px;
     border: 1px solid;
 float: right;
 margin: 5px;
+}
+.a3{
+ background-color: rgb(250, 152, 237);
+ width: 50%;
+ height: 275px;  
+ float: right;
+ border: 1px solid;
+ margin: 5px;
+}
+.izquierda{
+width: 400px;
+float: left;
+}
+.derecha{
+    width: 200px;
+float: right;
 }
