--- a/css/NF2/exercici3.css
+++ b/css/NF2/exercici3.css
@@ -2,105 +2,90 @@
   width: 600px;
   height: 600px;
 }
-.izquierda {
-  width: 400px;
-  float: left;
-}
-.derecha {
-  width: 200px;
-  float: right;
-}
+
 .a1 {
-  background-color: rgb(250, 152, 237);
-  width: 100%;
+  background-color: rgb(250, 215, 245);
+  width: 600px;
   height: 70px;
   
-  float: left;
+  
   margin-bottom: 6px;
 }
 .a2 {
-  background-color: rgb(211, 152, 250);
-  width: 48%;
-  height: 120px;
+  background-color: rgb(250, 152, 237);
+  width: 200px;
+  height: 70px;
 margin-bottom:6px;
-  float: left;
-
+ position: absolute; 
+margin-top: 0px;
 }
 .a3 {
-  background-color: rgb(250, 152, 237);
-  width: 48%;
+  background-color: rgb(152, 250, 221);
+  width: 210px;
   height: 186px;
-  float: right; 
-margin-bottom: 6px ;
-}
+  position: absolute;
+margin-left: 210px ;
 
+}
 
 .a4 {
-  background-color: rgb(250, 152, 237);
-  width: 48%;
-  height: 60px;
+  background-color: rgb(250, 215, 245);
+  width: 200px;
+  height: 70px;
 margin-bottom: 6px;
-  float: left;
+position: absolute;
+margin-top: 80px;
+}
+
+.a5{
+  background-color:rgb(250, 152, 237);
+  width: 200px;
+  height: 70px;
+margin-bottom:px;
+position: absolute;
+margin-top:160px;
 }
 .a6 {
-  background-color: rgb(255, 215, 245);
-  width: 48%;
-  height: 60px;
+  background-color: rgb(211, 152, 250);
+  width: 200px;
+  height: 140px;
 margin-bottom: 6px;
-  float: right;
+ margin-top: 250px;
+po
 }
 .a7 {
-  background-color: rgb(255, 215, 245);
-  width: 48%;
-  height: 60px;
+  background-color: rgb(250, 215, 245);
+  width: 200px;
+  height: 70px;
 margin-bottom: 6px;
-  float: right;
- 
+  position: absolute;
+ margin-left: 80px;
 }
-.a5 {
-  background-color: rgb(211, 152, 250);
-  width: 48%;
-  height: 120px;
-margin-bottom: 6px;
-  float: left;
+
+ margin-top: 50px;
   
 }
 .a8 {
-    background-color:rgb(255, 215, 245);
-
-    width: 95%;
-    height: 60px;
-    float: right;
-  margin-bottom: 6px;
-  }
-  .a9 {
     background-color:rgb(250, 152, 237);
 
-    width: 95%;
-    height: 60px;
-    float: right;
+    width: 200px;
+    height: 70px;
+    
+  margin-bottom: px;
+  }
+  .a9 {
+    background-color:rgb(250, 215, 245);
+
+    width: 200px;
+    height: 210px;
+    
   margin-bottom: 6px;
   }
 .a10 {
-    background-color: rgb(255, 215, 250);
-    width: 95%;
-    height: 60px;
-    float: right;
+    background-color: rgb(255, 215, 245);
+    width: 400px;
+    height: 70px;
+   
    margin-bottom: 6px;
   }
-.a11 {
-  background-color: rgb(220, 173, 241);
-  width: 95%;
-  height: 120px;
-margin-bottom: 6px;
-  float: right;
-  
-}
-.a12 {
-  background-color: rgb(250, 152, 237);
-  width: 95%;
-  height: 60px;
 
-  float: right;
-margin-bottom: 8px;
-}
