--- a/paginesweb/practica_grid/propietat_grid.css
+++ b/paginesweb/practica_grid/propietat_grid.css
@@ -35,12 +35,6 @@
         grid-template-rows: 20% 20% 20% 20% 20%;
       }
       
-      # div5{
-        display: grid;
-        grid-template-columns: 20% 20% 20% 20% 20%;
-        grid-template-rows: 20% 20% 20% 20% 20%;
-      }
-      
       #termina3{
           grid-row-start:3;
       grid-column-start:2 ;
@@ -49,3 +43,33 @@
         grid-row-start:3 ;
     grid-column-start:2 ;
     }
+    
+    #div6 {
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+        grid-template-rows: 20% 20% 20% 20% 20%;
+      }
+      
+    #kinton{
+        grid-row-start:3;
+    grid-column-start:2 ;
+    
+  }
+  #goku3{
+      grid-row-start:1 ;
+  grid-column-start:2 ;
+  opacity:0.8 ; 
+}
+#div7 {
+  display: grid;
+  grid-template-columns: 30% 70% ; 
+  grid-template-rows: 20% 20% 20% 20% 20%;
+}
+#goku4{
+  grid-row-start:1 ;
+grid-column-start:1 ;
+
+}
+#vegeta{
+  grid-row-start:2 ;
+grid-column-start:2 ;
